--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
-  flutter_datetime_picker: ^1.5.1
+  flutter_datetime_picker:
+    git: https://github.com/Realank/flutter_datetime_picker.git
 
 dev_dependencies:
   flutter_test:
