--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   intl: ^0.17.0
   flutter_datetime_picker:
     git: https://github.com/Realank/flutter_datetime_picker.git
+  http:
+  shared_preferences: ^2.0.7
+
 
 dev_dependencies:
   flutter_test:
