--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.my_flutter_project">
+    package="com.kncircle.mytodolist">
    <application
-        android:label="my_flutter_project"
+        android:label="TodoList"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
